force-app/main/default/objects/Payment_Schedule__c/fields/Schedule_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_From__c</fullName>
    <label>Schedule Date From</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>