force-app/main/default/objects/Payment_Schedule__c/fields/Schedule_From__c.field-meta.xml
<CustomField>
    <fullName>Schedule_From__c</fullName>
    <label>Schedule From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due Date</fullName>
            </value>
            <value>
                <fullName>Last Day of Week of Due Date</fullName>
            </value>
            <value>
                <fullName>Last Day of Month of Due Date</fullName>
            </value>
            <value>
                <fullName>First Day of Month of Due Date</fullName>
            </value>
            <value>
                <fullName>First Day of Week of Due Date</fullName>
            </value>
            <value>
                <fullName>First Day Of Next Month Of Due Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>