force-app/main/default/objects/Payment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Payment_Mode__c</columns>
    <columns>Schedule_From__c</columns>
    <columns>Schedule_Date_From__c</columns>
    <columns>Schedule_Date_To__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>